--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -2,6 +2,7 @@
     "MENU":{
         "MYABM": "Mi Abm",
         "RATES": "Tarifas",
+        "PROVIDER": "Provedoor",
         "LAYOUT": "Estructura",
         "LAYOUT-STEPPER": "Paso a paso",
         "LAYOUT-LIST": "Lista",
