--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -16,7 +16,13 @@
         "MOVEMENTTYPES":"Tipos de movimiento",
         "UNITS":"Unidades",
         "DEPOTS":"Depositos",
-        "MOVEMENTS":"Movimientos"
+        "MOVEMENTS":"Movimientos",
+        "STATEOFDOCUMENTS":"Estado de documento",
+        "STATEOFACTORS":"Estado del actor",
+        "OFFICES":"Oficina",
+        "TYPEOFACTORS":"Tipo de actor",
+        "TYPEOFDOCUMENTS":"Tipo de documento"
+        
     },
     "PRODUCTS":{
         "TITLE_MAINTAINENCE":"Mantenimiento de productos",
@@ -284,18 +290,29 @@
     },
     "MOVEMENTS":{
         "TITLE_MAINTAINENCE":"Mantenimiento de Movimientos",
-        "COLUMN_NAME": "Nombre",
-        "COLUMN_DESCRIPTION": "Descripción",
+        "COLUMN_DETAILS": "Detalles",
         "COLUMN_QUANTITY": "Cantidad",
+        "COLUMN_UNITY":"Unidad",
         "COLUMN_TIME": "Fecha de movimiento",
+        "COLUMN_PRODUCT": "Producto",
+        "COLUMN_ENABLEIN": "Entrada",
+        "COLUMN_ENABLEOUT": "Salida",
         "COLUMN_CREATED_ON": "Creado",
         "COLUMN_UPDATED_ON": "Modificado",
+        "COLUMN_MOVEMENTTYPE": "Tipo de Movimiento",
+
+        "COMBO_BOOL_YES":"SI",
 
         "FORM_ERROR_NAME": "Ingrese un nombre porfavor.",
         "FORM_ERROR_DESCRIPTION": "Ingrese una descripción porfavor.",
-
+        "FORM_ERROR_QUANTITY":"Ingrese una cantidad",
+        "FORM_ERROR_UNITY":"Ingrese unidades",
+        
         "FORM_PLACE_HOLDER_STOCK_IN": "Entran movimientos?",
         "FORM_PLACE_HOLDER_STOCK_OUT": "Salen movimientos?",
+        "FORM_PLACE_HOLDER_PRODUCT": "Seleccione el producto",
+        "FORM_PLACE_HOLDER_UNIT": "Seleccione unidad",        
+        "FORM_PLACE_HOLDER_MOVEMENTTYPE": "Tipo de movimiento?",
 
         "CANCEL": "Cancelar",
         "RESET": "Limpiar",
@@ -305,5 +322,103 @@
         "UPDATE": "Actualizar Movimiento",
         "DELETE": "Eliminar Movimiento",
         "DISPLAY": "Visualizar Movimiento"
+    },
+    "STATEOFDOCUMENTS":{
+        "TITLE_MAINTAINENCE":"Mantenimiento de Estado de documento",
+        "COLUMN_NAME": "Nombre",
+        "COLUMN_DESCRIPTION": "Descripción",
+        "COLUMN_CREATED_ON": "Creado",
+        "COLUMN_UPDATED_ON": "Modificado",
+
+        "FORM_ERROR_NAME": "Ingrese un nombre porfavor.",
+        "FORM_ERROR_DESCRIPTION": "Ingrese una descripción porfavor.",
+
+        "CANCEL": "Cancelar",
+        "RESET": "Limpiar",
+        "CONFIRM": "Confirmar",
+
+        "CREATE": "Crear Estado de documento",
+        "UPDATE": "Actualizar Estado de documento",
+        "DELETE": "Eliminar Estado de documento",
+        "DISPLAY": "Visualizar Estado de documento"
+    },
+    "STATEOFACTORS":{
+        "TITLE_MAINTAINENCE":"Mantenimiento de Estado del actor",
+        "COLUMN_NAME": "Nombre",
+        "COLUMN_DESCRIPTION": "Descripción",
+        "COLUMN_CREATED_ON": "Creado",
+        "COLUMN_UPDATED_ON": "Modificado",
+
+        "FORM_ERROR_NAME": "Ingrese un nombre porfavor.",
+        "FORM_ERROR_DESCRIPTION": "Ingrese una descripción porfavor.",
+
+        "CANCEL": "Cancelar",
+        "RESET": "Limpiar",
+        "CONFIRM": "Confirmar",
+
+        "CREATE": "Crear Estado del acto",
+        "UPDATE": "Actualizar Estado del acto",
+        "DELETE": "Eliminar Estado del acto",
+        "DISPLAY": "Visualizar Estado del acto"
+    },
+    "OFFICES":{
+        "TITLE_MAINTAINENCE":"Mantenimiento de la Oficina",
+        "COLUMN_NAME": "Nombre",
+        "COLUMN_DESCRIPTION": "Descripción",
+        "COLUMN_CREATED_ON": "Creado",
+        "COLUMN_UPDATED_ON": "Modificado",
+
+        "FORM_ERROR_NAME": "Ingrese un nombre porfavor.",
+        "FORM_ERROR_DESCRIPTION": "Ingrese una descripción porfavor.",
+
+        "CANCEL": "Cancelar",
+        "RESET": "Limpiar",
+        "CONFIRM": "Confirmar",
+
+        "CREATE": "Crear Oficina",
+        "UPDATE": "Actualizar Oficina",
+        "DELETE": "Eliminar Oficina",
+        "DISPLAY": "Visualizar Oficina"
+    },
+    "TYPEOFACTORS":{
+        "TITLE_MAINTAINENCE":"Mantenimiento del tipo de actor",
+        "COLUMN_NAME": "Nombre",
+        "COLUMN_DESCRIPTION": "Descripción",
+        "COLUMN_CREATED_ON": "Creado",
+        "COLUMN_UPDATED_ON": "Modificado",
+
+        "FORM_ERROR_NAME": "Ingrese un nombre porfavor.",
+        "FORM_ERROR_DESCRIPTION": "Ingrese una descripción porfavor.",
+
+        "CANCEL": "Cancelar",
+        "RESET": "Limpiar",
+        "CONFIRM": "Confirmar",
+
+        "CREATE": "Crear tipo de Actor",
+        "UPDATE": "Actualizar tipo de Actor",
+        "DELETE": "Eliminar tipo de Actor",
+        "DISPLAY": "Visualizar tipo de Actor"
+    },
+    "TYPEOFDOCUMENTS":{
+        "TITLE_MAINTAINENCE":"Mantenimiento del tipo de documento",
+        "COLUMN_NAME": "Nombre",
+        "COLUMN_DESCRIPTION": "Descripción",
+        "COLUMN_REGNUMPATHERN": "RegNumPathern",
+        "COLUMN_CREATED_ON": "Creado",
+        "COLUMN_UPDATED_ON": "Modificado",
+
+        "FORM_ERROR_NAME": "Ingrese un nombre porfavor.",
+        "FORM_ERROR_DESCRIPTION": "Ingrese una descripción porfavor.",
+        "FORM_ERROR_REGNUMPATHERN": "Ingrese un RegNumPathern porfavor.",
+        
+
+        "CANCEL": "Cancelar",
+        "RESET": "Limpiar",
+        "CONFIRM": "Confirmar",
+
+        "CREATE": "Crear tipo de documento",
+        "UPDATE": "Actualizar tipo de documento",
+        "DELETE": "Eliminar tipo de documento",
+        "DISPLAY": "Visualizar tipo de documento"
     }
 }
