--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -300,6 +300,7 @@
         "COLUMN_CREATED_ON": "Creado",
         "COLUMN_UPDATED_ON": "Modificado",
         "COLUMN_MOVEMENTTYPE": "Tipo de Movimiento",
+        "COLUMN_STORE_CODE": "Codigo de almacenamiento",
 
         "COMBO_BOOL_YES":"SI",
 
@@ -307,6 +308,8 @@
         "FORM_ERROR_DESCRIPTION": "Ingrese una descripción porfavor.",
         "FORM_ERROR_QUANTITY":"Ingrese una cantidad",
         "FORM_ERROR_UNITY":"Ingrese unidades",
+        "FORM_ERROR_EAN_CODE":"Ingrese un Codigo EAN correcto",
+
         
         "FORM_PLACE_HOLDER_STOCK_IN": "Entran movimientos?",
         "FORM_PLACE_HOLDER_STOCK_OUT": "Salen movimientos?",
